sample config file added

--- a/src/editor.html
+++ b/src/editor.html
@@ -4,10 +4,13 @@
   <link rel="stylesheet" type="text/css" href="jquery.notify.css" />
   <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/black-tie/jquery-ui.css" />
   <script src="leaflet/leaflet.js"></script>
+  <script src="kothic/kothic.min.js"></script>
+  <script src="kothic/kothic-leaflet.js"></script>
   
   <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>  
   <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
-  <script src='jquery.notify.js'></script>
+  <script src="jquery.notify.js"></script>
+  <script src="config.js"></script>
 </head>
 <body>
 <table width=100% height=100%>
