--- a/src/editor.html
+++ b/src/editor.html
@@ -1,5 +1,6 @@
 
 <html><head><title>MapCSS editor with syntax highlighting</title>
+  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="leaflet/leaflet.css" />
   <link rel="stylesheet" type="text/css" href="jquery.notify.css" />
   <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/black-tie/jquery-ui.css" />
@@ -14,34 +15,29 @@
   <script src="config.js"></script>
 </head>
 <body>
-<table width=100% height=100%>
-  <tr>
-    <td rowspan="2" width=50%>
-      <div id="map" style="height:100%; width:100%"></div>
-    </td>
-    <td height=30>
-      <button id="save">Submit</button>
-    </td>
-    <form method="post" action="download.php" id="postfields">
-		<input type="hidden"  name="format" id="format"/>
-		<input type="hidden"  name="mapcss" id="mapcss"/>
-	</form>
-    <td height="30">
-      <button id="css">Download as MapCSS</button>
-    </td>
-    <td height="30">
-      <button id="js">Download as JS</button>
-    </td>
-  </tr>
-  <tr>
-    <td valign="top" colspan="2">
-      <div id="editor" style="height: 80%; width: 50%;" >  
+	<div id="container">
+		<div id="header"><h1>MapCSS Studio</h1></div>
+		<div id="content">
+			<div id="map"></div>
+			<div id="color-preview"></div>
+		<div id="right-pane">
+			<div id="toolbar">
+				<form method="post" action="download.php" id="postfields">
+					<input type="hidden"  name="format" id="format"/>
+					<input type="hidden"  name="mapcss" id="mapcss"/>
+				</form>
+				<button id="color">Pick a color</button>
+				<button id="css">Download as MapCSS</button>
+				<button id="js">Download as JS</button>
+				<button id="save">Submit</button>
+			</div>
+		<div id="editor" style="height: 80%; width: 50%;" >  
 canvas{fill-color:white}
 way[highway]{color:red; width:3}
       </div>
-    </td>
-  </tr>
-</table>
+    </div>
+</div>
+</div>
 
 <script src="src/ace.js" type="text/javascript" charset="utf-8"></script>
 <script src="src/mode-mapcss.js" type="text/javascript" charset="utf-8"></script>
